# macSpeakerSynth

./: CMakeLists.txt  README.md  plan.md  run.sh
build-neon/: CMakeCache.txt  Makefile  benchmark_neon  cmake_install.cmake
build-scalar/: CMakeCache.txt  Makefile  benchmark_neon  cmake_install.cmake
include/: AudioCore.h  ControlMessage.h  ControlParser.h  LockFreeQueue.h
include/DSP_utilities/: Biquad.h  DelayLine.h  Envelope.h  Oscillator.h  SimdOscillator.h  SoftClip.h  StateVariableFilter.h  Voice.h  Waveform.h
include/platform/: AudioOutput.h
learning/: 00_START_HERE.md  CURRENT_STATE.md  GLOSSARY.md  INTERVIEW_READY_RUNDOWN.md  PERFORMANCE_TRACKING.md  POLYPHONY_SOUND_NOTES.md  REFERENCE_IMPLEMENTATIONS.md  ROADMAP.md
learning/lab01/: README.md
learning/lab02/: README.md
learning/lab03/: README.md
learning/lab04/: README.md
learning/lab05/: README.md
learning/lab06/: README.md
learning/lab07/: README.md
learning/lab08/: README.md
learning/lab09/: README.md
learning/lab10/: README.md
learning/lab11/: README.md
learning_slop/: implementation.md
py_interface/: main.py  race_ui.py  zmq_client.py
src/: AudioCore.cpp  ControlParser.cpp  main.cpp
src/DSP_utilities/: Biquad.cpp  DelayLine.cpp  Envelope.cpp  Oscillator.cpp  SimdOscillator.cpp  SoftClip.cpp  StateVariableFilter.cpp  Voice.cpp  Waveform.cpp
src/platform/: CoreAudioOutput.mm  MiniaudioOutput.cpp
tests-and-benchmarks/: benchmark_neon.cpp  test_lab01.cpp  test_lab02.cpp  test_lab03.cpp  test_lab04.cpp  test_lab05.cpp  test_lab06.cpp  test_lab07.cpp  test_lab08.cpp  test_lab09.cpp
